--- a/SanJuanSaludAPP/package.json
+++ b/SanJuanSaludAPP/package.json
@@ -10,10 +10,12 @@
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
         "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+        "cordova-plugin-request-location-accuracy": "^2.2.2",
         "cordova-plugin-whitelist": "1.2.2",
         "cordova-sqlite-storage": "^2.0.4",
         "cordova-windows": "4.4.2",
-        "material-design-lite": "^1.3.0"
+        "material-design-lite": "^1.3.0",
+        "cordova-plugin-x-toast": "^2.6.0"
     },
     "cordova": {
         "platforms": [
@@ -33,7 +35,9 @@
                 "API_KEY_FOR_IOS": "AIzaSyBZK0bGv6wCVNOpLiLRLgV_hy8B-Y07pp4",
                 "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
                 "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
-            }
+            },
+            "cordova-plugin-request-location-accuracy": {},
+            "cordova-plugin-x-toast": {}
         }
     }
 }
