--- a/SanJuanSaludAPP/package.json
+++ b/SanJuanSaludAPP/package.json
@@ -12,10 +12,10 @@
         "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
         "cordova-plugin-request-location-accuracy": "^2.2.2",
         "cordova-plugin-whitelist": "1.2.2",
+        "cordova-plugin-x-toast": "^2.6.0",
         "cordova-sqlite-storage": "^2.0.4",
         "cordova-windows": "4.4.2",
-        "material-design-lite": "^1.3.0",
-        "cordova-plugin-x-toast": "^2.6.0"
+        "material-design-lite": "^1.3.0"
     },
     "cordova": {
         "platforms": [
