--- a/SanJuanSaludAPP/package.json
+++ b/SanJuanSaludAPP/package.json
@@ -11,6 +11,7 @@
         "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
         "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
         "cordova-plugin-request-location-accuracy": "^2.2.2",
+        "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-sqlite-2": "^1.0.4",
         "cordova-plugin-websql": "0.0.10",
         "cordova-plugin-whitelist": "1.2.2",
@@ -18,7 +19,9 @@
         "cordova-sqlite-storage": "^2.0.4",
         "cordova-windows": "4.4.2",
         "material-design-lite": "^1.3.0",
-        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.4"
+        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.4",
+        "cordova-plugin-android-softinputmode": "^0.2.1",
+        "cordova-custom-config": "^4.0.2"
     },
     "cordova": {
         "platforms": [
@@ -45,7 +48,10 @@
             "cordova-plugin-websql": {},
             "uk.co.workingedge.phonegap.plugin.launchnavigator": {
                 "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
-            }
+            },
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-android-softinputmode": {},
+            "cordova-custom-config": {}
         }
     }
 }
