--- a/SanJuanSaludAPP/package.json
+++ b/SanJuanSaludAPP/package.json
@@ -5,7 +5,9 @@
     "dependencies": {
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
+        "cordova-custom-config": "^4.0.2",
         "cordova-ios": "4.2.0",
+        "cordova-plugin-android-softinputmode": "^0.2.1",
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
@@ -19,9 +21,7 @@
         "cordova-sqlite-storage": "^2.0.4",
         "cordova-windows": "4.4.2",
         "material-design-lite": "^1.3.0",
-        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.4",
-        "cordova-plugin-android-softinputmode": "^0.2.1",
-        "cordova-custom-config": "^4.0.2"
+        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.4"
     },
     "cordova": {
         "platforms": [
