--- a/SanJuanSaludAPP/package.json
+++ b/SanJuanSaludAPP/package.json
@@ -8,7 +8,7 @@
         "cordova-browser": "^4.1.0",
         "cordova-custom-config": "^4.0.2",
         "cordova-ios": "4.2.0",
-        "cordova-plugin-android-softinputmode": "^0.2.1",
+        "cordova-plugin-android-softinputmode": "file://node_modules\\cordova-plugin-android-softinputmode",
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
@@ -51,9 +51,9 @@
                 "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
             },
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-android-softinputmode": {},
             "cordova-custom-config": {},
-            "call-number": {}
+            "call-number": {},
+            "cordova-plugin-android-softinputmode": {}
         }
     }
 }
