--- a/SanJuanSaludAPP/package.json
+++ b/SanJuanSaludAPP/package.json
@@ -19,11 +19,11 @@
         "cordova-plugin-websql": "0.0.10",
         "cordova-plugin-whitelist": "1.2.2",
         "cordova-plugin-x-toast": "^2.6.0",
+        "cordova-sms-plugin": "^0.1.11",
         "cordova-sqlite-storage": "^2.0.4",
         "cordova-windows": "4.4.2",
         "material-design-lite": "^1.3.0",
-        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.4",
-        "cordova-sms-plugin": "^0.1.11"
+        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.4"
     },
     "cordova": {
         "platforms": [
