Formulario de datos personales Transaccion unica en bd. Deteccion de tipo de conexion.

--- a/SanJuanSaludAPP/package.json
+++ b/SanJuanSaludAPP/package.json
@@ -13,6 +13,7 @@
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+    "cordova-plugin-network-information": "^1.3.4",
     "cordova-plugin-request-location-accuracy": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "1.2.2",
@@ -51,7 +52,8 @@
       "cordova-custom-config": {},
       "call-number": {},
       "cordova-sms-plugin": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-network-information": {}
     }
   }
 }
